tests/ast_interpreter/len.expected
2
<string>:3:11: error: function len expects 1 argument, but 0 were provided
    print(len());
          ^^^^^
