tests/ast_interpreter/len.nx
fun main() {
    print(len("42"));
    print(len());
}
